# famcal

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.truenas.yml  nginx.conf  package-lock.json  package.json  vercel.json
.claude/rules/: .intel-changelog  codebase-patterns.md  init.md  project-intel.md
.claude/scratch/: task-state.md
.fleet/fleet-mn565u2y-lrjygi/: settings-fleet.json
.github/workflows/: COPILOT_REVIEW_SETUP.md  build-kiosk-image.yml  copilot-code-review.yml  copilot-review.yml  tauri-build.yml  trigger-infra-build.yml
.gsd/: STATE.md
api/: chat.js  dashboard-write.js  dashboard.js  google-sync.js  google-token.js  photos.js  send-digest.js  voice-nova-key.js  voice-transcribe.js  voice-tts.js
docs/: env-vars.md
docs/migrations/: add-event-comments.sql  add-weekly-stars.sql
kiosk/: first-boot.sh  pi-gen-config  setup.sh
public/: index.html
server/: Dockerfile  index.js  package.json
src/: App.js  index.js  serviceWorkerRegistration.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/context/: AuthContext.js  CalendarContext.js  FamilyContext.js  TaskContext.js  ThemeContext.js  TimerAlarmContext.js
src/hooks/: useIdleTimer.js  useNovaVoice.js  useSupabaseRealtime.js  useVoiceMode.js
src/lib/: ai.js  aiSuggestions.js  api.js  artPhotos.js  googleCalendar.js  googlePhotos.js  notifications.js  supabase.js  tauri-bridge.js  weather.js
supabase/: complete-schema.sql  realtime-triggers.sql
(+93 files in other folders)
