[package]
name = "famcal-kiosk"
version = "1.0.0"
description = "FamCal Kiosk — Family Calendar Wall Display"
authors = ["Asik"]
edition = "2021"

[lib]
name = "famcal_kiosk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
